Added some reasoning

--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -234,6 +234,12 @@
   note = {Accessed: 02-09-2016}
 }
 
+@misc{GLIB,
+  author= "The GNOME Project",
+  url={https://wiki.gnome.org/Home3},
+  note = {Accessed: 02-010-2015}
+}
+
 % Comments:
 % Both C_RATIONAL and GNU_SOCKETS are obviously credited wrong.
 % What is the right way? :/
