--- a/thesis/proposal.tex
+++ b/thesis/proposal.tex
@@ -7,7 +7,7 @@
   \caption[Symmetricom SA.45s CSAC]
    {Symmetricom SA.45s CSAC. Courtesy Symmetricom.}
 \end{wrapfigure} 
-We propose to construct and use what we call a \textit{Spoof proof atomic clock controller}. The spoof proof atomic clock controller consists of custom software running on commodity computer hardware, connected to at \texiti{least} two GPS receivers and an atomic clock.
+We propose to construct and use what we call a \textit{Spoof proof atomic clock controller}. The spoof proof atomic clock controller consists of custom software running on commodity computer hardware, connected to at \textit{least} two GPS receivers and an atomic clock.
 With the spoof proof atomic clock controller you can perform:
 \begin{itemize}
 	\item Spoofing detection.
@@ -22,4 +22,4 @@ With the spoof proof atomic clock controller you can perform:
 \end{itemize}
 
 \section{Filtering and steering}
-The spoof proof atomic clock controller uses what we call \texiti{filters} for detection. The filters are algorithms used to detect a spoofing attempt or just general abnormalities that might affect applications relying on GPS time. The filters can be divided into two classes or types. They are either GPS based, or clock model based. The GPS filters analyzes collected GPS data and verifies their validity. This can be achieved by comparing the collected GPS data with known GPS data for the receivers. The clock model based are a little more sophisticated. By analyzing the behavior of the atomic clock used by the spoof proof atomic clock controller, a model can be built and used as a reference. This approach was actually suggested in subsection \ref{ctsarcs} but in that instance, using the receivers internal clock. This approach was considered auxiliary because of the receivers clocks poor performance. This is in contrast to our proposal where we have a stable and accurate atomic clock. This makes it possible to evaluate the GPS signal used to discipline the atomic clock. The model can also be used for mitigation during an attack. Once an attack has been detected, the atomic clock should no longer be disciplined by the signal. The clock should be usable for a while without disciplining, but with the clock model used for steering, it will last even longer.
+The spoof proof atomic clock controller uses what we call \textit{filters} for detection. The filters are algorithms used to detect a spoofing attempt or just general abnormalities that might affect applications relying on GPS time. The filters can be divided into two classes or types. They are either GPS based, or clock model based. The GPS filters analyzes collected GPS data and verifies their validity. This can be achieved by comparing the collected GPS data with known GPS data for the receivers. The clock model based are a little more sophisticated. By analyzing the behavior of the atomic clock used by the spoof proof atomic clock controller, a model can be built and used as a reference. This approach was actually suggested in subsection \ref{ctsarcs} but in that instance, using the receivers internal clock. This approach was considered auxiliary because of the receivers clocks poor performance. This is in contrast to our proposal where we have a stable and accurate atomic clock. This makes it possible to evaluate the GPS signal used to discipline the atomic clock. The model can also be used for mitigation during an attack. Once an attack has been detected, the atomic clock should no longer be disciplined by the signal. The clock should be usable for a while without disciplining, but with the clock model used for steering, it will last even longer.
