--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -1,8 +1,6 @@
 \documentclass[../main.tex]{subfiles}
 
-\chapter{Atomic clock controller implementation}
-
-\section{Sensor Server architecture}
+\chapter{Atomic clock controller architecture}
 When discussing how to implement the software realizing the spoof proof atomic clock controller, the following features and requirements were found: 
 \begin{itemize}
   \item Needs to be fast in order to detect attacks early to maximize mitigation.
@@ -14,7 +12,7 @@ When discussing how to implement the software realizing the spoof proof atomic c
   \item Graphical user interface not a requirement
 \end{itemize}
 
-\subsection{Client/Server model}
+\section{Client/Server model}
 In order to connect many GPS receivers to the atomic clock controller, we decided to implement a client/server model. The atomic clock controller serves the same purpose as before, but also doubles as a server. The data transmitted, will still be the same, the only difference is the interface and media. A network interface will be used instead of USB, and the media can be whatever is available since TCP/IP is designed to be hardware independent. This means that one could for example use:
 \begin{itemize}
   \item Twisted pair
@@ -24,7 +22,7 @@ In order to connect many GPS receivers to the atomic clock controller, we decide
 \end{itemize}
 Because reaction time is a concern, high latency media is not recommended \footnote{IP over Avian Carriers as described in RFC 1149 is highly discouraged}. The GPS receivers that we have chosen to use, does not have a network interface, we instead use Raspberry PIs. Considering how cheap single board computer have become, the price of a Raspberry PI can be justified even just to network enable a GPS receiver. The latest model of the Raspberry Pi has even got a built in wireless network interface. See \ref{platform} for more about the Raspberry Pi 3. The combination the GPS receiver and the Raspberry PI, is in this report abstractly seen as one device. We call this device a Sensor. The Sensor is responsible for reporting data to the Server and not much more. The Sensor can be deployed using already existing infrastructure to communicate, thus making it easier to deploy than if each GPS receiver had to cabled directly to the atomic clock controller. There is no denying that the implementation of a Server/Client model greatly increases the complexity of the atomic clock controller software, but it makes up for it by eliminating the need for long signal cables and amplifiers. We call this approach the Sensor Server model.
 
-\subsection{Architecture description}
+\section{Architecture description}
 In order to connect the Sensors to the server, the atomic clock controllers software needs to be able to:
 \begin{itemize}
   \item Handle connections to clients.
@@ -40,7 +38,9 @@ Using processes presented us with a new challenge, interprocess communication. A
 The atomic clock controller does not have graphical user interface. Seeing how it was going to operate much like a service, the need for a graphical user interface was not prioritized. A user can interface with the system by logging on using telnet, and issue commands. In order to separate the intention of a connected client, be it to deliver GPS data or to send commands to system, roles where made. A client connected to the server can have two roles. It can either be a Sensor or a Monitor. The Sensor role is already explained. The Monitor role was added in order for a user of the system to connect to the server and check status or issue commands. For a client to assume the role of a Monitor, the client has to pick a negative integer as ID number. This way, the Server does not expect you as a client to report any NMEA data the way it would with a Sensor. The Monitor role can also be used to interface with the Server. See (\ref{interface}) for more.
 
 \subsection{Security}
-Implementing good security is not an easy task and should not be taken lightly. The goal when developing the Sensor Server was to produce a rough prototype that could prove our concept. Time was therefor allocated towards producing code and features that would realize this goal, instead of attempting to implement security mechanisms that would have been flawed anyway because of time constraints.
+Implementing good security is not an easy task and should not be taken lightly. The goal when developing the Sensor Server was to produce a rough prototype that could prove our concept. Time was therefor allocated towards producing features that would realize this goal, instead of attempting to implement security mechanisms that would have been flawed anyway because of time constraints.
+
+\chapter{Atomic clock controller implementation}
 
 \section{The Sensor Server} 
 Figure \ref{bd} shows a simplified block diagram of the Sensor Server and its tasks. Server tasks include:
